--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,21 @@
+/* Import Font Family In Google Font */
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+}
 
 @layer base {
   :root {
@@ -74,6 +89,10 @@
   * {
     @apply border-border;
   }
+  html {
+    font-family: "Inter", system-ui, sans-serif;
+  }
+
   body {
     @apply bg-background text-foreground;
     font-feature-settings:
